Visual-narratives button white spacing fixed + portfolio file split to address separation of concerns

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -140,3 +140,8 @@
     top: 0;
   }
 }
+
+button:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
